--- a/style.css
+++ b/style.css
@@ -2,7 +2,20 @@
 
 body{
     font-family: "Roboto", sans-serif;
-    padding: 0;
-    margin: 0;
     
+    
+    
+    }
+.aey{
+    display: flex;
+    justify-content: center;
+    
+    }
+li{
+    list-style-type: none;
+    display: inline;
+    margin: 14px;
+}
+#logo{
+    width: 50%;
 }
