--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
 
 body{
     font-family: "Roboto", sans-serif;
-    
-    
-    
+           
     }
 .aey{
     display: flex;
@@ -15,7 +13,72 @@ li{
     list-style-type: none;
     display: inline;
     margin: 14px;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 #logo{
     width: 50%;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+.one{
+     padding: 45px;;
+    background-color: #1F2937;
+}
+#para{
+    color: #F9FAF8;
+}
+.bee{
+    display: flex;
+    flex-direction: column;
+    margin-left: 35px;
+    margin-right: 45px;
+}
+h3{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.button{
+background-color: #3882F6;
+color: white;
+width: 120px;
+}
+.img{
+    width: 200px;
+    margin-left: 200px;
+    height: 180px;
+    display: flex;
+    
+}
+.setting{
+    display: flex;
+    flex-direction: row ;
+    
+}
+.two{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.first, .second, .third, .fourth{
+width: 200px;
+height: 200px;
+margin: 25px;
+border: 5px solid #3882F6;
+border-radius: 16px;
+position: relative;
+
+}
+#para2{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 700;
+}
+.para3{
+   position: absolute;
+   bottom: 0
 }
